--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.6.1",
+    "@mui/lab": "^5.0.0-alpha.79",
     "@mui/material": "^5.6.1",
     "@mui/x-date-pickers": "^5.0.0-alpha.1",
     "@testing-library/jest-dom": "^5.16.3",
