--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
