--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "socket.io-client": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
