--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
+    "react-phone-input-2": "^2.15.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-scroll-to-bottom": "^4.2.0",
